[gd_scene load_steps=2 format=3 uid="uid://quest_log_ui"]

[ext_resource type="Script" path="res://scenes/menus/quest_log_ui.gd" id="1"]

[node name="QuestLogUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 20.0
offset_right = -40.0
offset_bottom = -20.0

[node name="TopBar" type="HBoxContainer" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)

[node name="TabActive" type="Button" parent="VBox/TopBar"]
layout_mode = 2
text = "Active"

[node name="TabCompleted" type="Button" parent="VBox/TopBar"]
layout_mode = 2
text = "Completed"

[node name="TabAvailable" type="Button" parent="VBox/TopBar"]
layout_mode = 2
text = "Available"

[node name="TitleLabel" type="Label" parent="VBox/TopBar"]
layout_mode = 2
size_flags_horizontal = 6
text = "Quest Log"
horizontal_alignment = 2

[node name="CloseButton" type="Button" parent="VBox/TopBar"]
layout_mode = 2
text = "X"

[node name="Content" type="HSplitContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 300

[node name="LeftPanel" type="PanelContainer" parent="VBox/Content"]
layout_mode = 2
custom_minimum_size = Vector2(280, 0)

[node name="QuestScroll" type="ScrollContainer" parent="VBox/Content/LeftPanel"]
layout_mode = 2

[node name="QuestList" type="VBoxContainer" parent="VBox/Content/LeftPanel/QuestScroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RightPanel" type="PanelContainer" parent="VBox/Content"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DetailScroll" type="ScrollContainer" parent="VBox/Content/RightPanel"]
layout_mode = 2

[node name="DetailContent" type="VBoxContainer" parent="VBox/Content/RightPanel/DetailScroll"]
layout_mode = 2
size_flags_horizontal = 3
